Updated dependencies and theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: StackUp Tech Test Theme
+Theme Name: StackUp Digital Starter Theme
 Theme URI: https://stackupdigital.co.uk
 Author: StackUp Digital <jamie@stackupdigital.co.uk>
 Author URI: https://stackupdigital.co.uk
